--- a/HPA.yaml
+++ b/HPA.yaml
@@ -1,7 +1,7 @@
 apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
-  name: mi-aplicacion-hpa
+  name: mi-aplicacion-clima
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
