--- a/rolebinding.yaml
+++ b/rolebinding.yaml
@@ -1,13 +1,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
+kind: ClusterRoleBinding
 metadata:
-  name: read-secrets
-  namespace: default
+  name: argocd-network-policy-binding
 subjects:
-- kind: ServiceAccount
-  name: argocd-application-controller
-  namespace: argocd
+  - kind: ServiceAccount
+    name: argocd-application-controller
+    namespace: argocd
 roleRef:
-  kind: Role
-  name: secret-reader
+  kind: ClusterRole
+  name: argocd-network-policy-manager
   apiGroup: rbac.authorization.k8s.io
