--- a/rolebinding.yaml
+++ b/rolebinding.yaml
@@ -1,12 +1,13 @@
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
+kind: RoleBinding
 metadata:
-  name: argocd-network-policy-binding
+  name: argocd-application-controller-binding
+  namespace: default  # Asegúrate de usar el namespace correcto
 subjects:
   - kind: ServiceAccount
     name: argocd-application-controller
     namespace: default
 roleRef:
-  kind: ClusterRole
-  name: argocd-network-policy-manager
+  kind: Role  # Usa Role si el role es un Role y no un ClusterRole
+  name: argocd-application-controller  # Nombre del role que definiste
   apiGroup: rbac.authorization.k8s.io
